--- a/package.json
+++ b/package.json
@@ -15,8 +15,11 @@
     "react-bootstrap": "^2.10.5",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.28.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^3.0.1",
     "web-vitals": "^2.1.4"
+  },
+  "overrides": {
+    "typescript": "^5.0.2"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -50,9 +53,6 @@
     "constructs": "^10.4.2",
     "esbuild": "^0.24.0",
     "tsx": "^4.19.2",
-    "typescript": "^5.0.2"
-  },
-  "overrides": {
     "typescript": "^5.0.2"
   }
 }
