--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.28.0",
     "react-scripts": "^3.0.1",
+    "typescript": "^5.0.2",
     "web-vitals": "^2.1.4"
   },
   "overrides": {
